// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <Connect(withAppState(TabHeader))
    alm="gitlab"
    definitionCount={0}
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={true}
    timeout={100}
  >
    <AlmPRDecorationTable
      additionalColumnsHeaders={Array []}
      alm="gitlab"
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <Connect(withAppState(TabHeader))
    alm="gitlab"
    definitionCount={0}
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AlmPRDecorationTable
      additionalColumnsHeaders={Array []}
      alm="gitlab"
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</Fragment>
`;

exports[`should render correctly 3`] = `
<Fragment>
  <Connect(withAppState(TabHeader))
    alm="gitlab"
    definitionCount={0}
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AlmPRDecorationTable
      additionalColumnsHeaders={Array []}
      alm="gitlab"
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
  <AlmPRDecorationFormModal
    alm="gitlab"
    bindingDefinition={
      Object {
        "key": "foo",
        "personalAccessToken": "foobar",
      }
    }
    onCancel={[MockFunction]}
    onSubmit={[MockFunction]}
  >
    <Component />
  </AlmPRDecorationFormModal>
</Fragment>
`;
